[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contracthub"
version = "0.7.1"
description = "ContractHub importers for generating ODCS contracts from Delta, SQL folders, and Unity Catalog"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "pydantic>=2.8.0",
  "PyYAML>=6.0.0",
  "requests>=2.32.0",
  "datacontract-cli>=0.12.0",
]

[project.scripts]
contracthub = "contracthub.interfaces.cli:main"

[project.optional-dependencies]
sql = [
  "SQLAlchemy>=2.0.0",
  "sqlglot>=26.0.0",
  "pandas>=2.0.0",
]
delta = [
  "deltalake>=0.18.0",
  "pyarrow>=14.0.0",
  "pandas>=2.0.0",
]
quality = [
  "great_expectations>=1.0.0",
  "pandas>=2.0.0",
]
llm = [
  "openai>=1.0.0",
  "litellm>=1.83.14",
]
tui = [
  "textual>=8.2.7",
]
databricks = [
  "databricks-sql-connector>=3.0.0",
  "pyspark>=3.3.0",
]
azure = [
  "azure-identity>=1.16.0",
  "azure-storage-file-datalake>=12.16.0",
]
graph = [
  "networkx>=3.0",
]
s3 = [
  "boto3>=1.34.0",
  "s3fs>=2024.3.0",
]
dbt = [
  "datacontract-cli[dbt]>=0.12.0",
]
all = [
  "SQLAlchemy>=2.0.0",
  "sqlglot>=26.0.0",
  "pandas>=2.0.0",
  "deltalake>=0.18.0",
  "pyarrow>=14.0.0",
  "great_expectations>=1.0.0",
  "openai>=1.0.0",
  "litellm>=1.83.14",
  "textual>=8.2.7",
  "databricks-sql-connector>=3.0.0",
  "pyspark>=3.3.0",
  "azure-identity>=1.16.0",
  "azure-storage-file-datalake>=12.16.0",
  "networkx>=3.0",
  "boto3>=1.34.0",
  "s3fs>=2024.3.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-mock>=3.14.0",
  "networkx>=3.0",
  "types-PyYAML>=6.0.0",
  "databricks-sql-connector>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["contracthub*"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "uv build"
allow_zero_version = true
major_on_zero = false
